fix scrollbar

--- a/inc/css/decoration.css
+++ b/inc/css/decoration.css
@@ -52,3 +52,20 @@ a {
     height: 200px;
     background-size: cover;
 }
+
+.scroll::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	background-color: #F5F5F5;
+}
+
+.scroll::-webkit-scrollbar
+{
+	width: 3px;
+	background-color: #F5F5F5;
+}
+
+.scroll::-webkit-scrollbar-thumb
+{
+	background-color: #000000;
+}
